# godot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeProfiles.txt  Makefile  formatProject.py  gles3_builders.py  glsl_builders.py  methods.py  platform_methods.py  scu_builders.py
core/: CMakeLists.txt  core_bind.cpp  core_bind.h  core_builders.py  core_globals.h  core_string_names.h  doc_data.h  typedefs.h  version.h
core/config/: engine.h  project_settings.cpp  project_settings.h
core/crypto/: crypto.h  hashing_context.h
core/debugger/: engine_profiler.h  remote_debugger.h  remote_debugger_peer.cpp  remote_debugger_peer.h
core/error/: error_list.cpp
core/extension/: extension_api_dump.cpp  gdextension.cpp  gdextension.h  gdextension_interface.cpp  gdextension_library_loader.cpp  gdextension_library_loader.h  gdextension_manager.h
core/input/: default_controller_mappings.h  input.h  input_enums.h  input_event.h  input_map.h
core/io/: dir_access.h  file_access.h  file_access_compressed.cpp  file_access_encrypted.cpp  file_access_encrypted.h  file_access_memory.h  file_access_pack.cpp  http_client.cpp  http_client.h  image.cpp  image.h  image_loader.h  ip.h  ip_address.cpp  ip_address.h  json.h  logger.h  marshalls.cpp  missing_resource.cpp  packed_data_container.cpp  packet_peer.cpp  pck_packer.cpp  plist.cpp  remote_filesystem_client.cpp  resource.h  resource_importer.cpp  resource_importer.h  resource_loader.h  resource_saver.h  resource_uid.h  stream_peer.h  stream_peer_gzip.h  stream_peer_tcp.h  tcp_server.h  translation_loader_po.h  xml_parser.h
core/math/: a_star_grid_2d.h  aabb.h  audio_frame.h  basis.cpp  basis.h  color.h  convex_hull.cpp  delaunay_2d.h  delaunay_3d.h  dynamic_bvh.h  face3.h  geometry_2d.cpp  geometry_2d.h  geometry_3d.h  math_defs.h  math_funcs.h  plane.cpp  plane.h  projection.cpp  projection.h  quaternion.h  quick_hull.cpp  random_pcg.h  rect2.h  rect2i.h  transform_2d.h  transform_3d.h  transform_interpolator.h  vector2.h  vector2i.h  vector3.h  vector3i.h  vector4.h  vector4i.h
core/object/: CMakeLists.txt  callable_method_pointer.h  class_db.cpp  class_db.h  make_virtuals.py  message_queue.h  method_bind.h  object.h  object_id.h  ref_counted.h  script_instance.h  script_language.cpp  script_language.h  script_language_extension.h  undo_redo.h  worker_thread_pool.cpp  worker_thread_pool.h
core/os/: main_loop.h  memory.h  mutex.h  os.cpp  os.h  rw_lock.h  safe_binary_mutex.h  semaphore.h  time.cpp  time.h
core/string/: node_path.h  print_string.cpp  string_builder.cpp  string_builder.h  string_name.h  translation_domain.h  translation_server.h  ustring.cpp  ustring.h
core/templates/: bin_sorted_array.h  command_queue_mt.h  cowdata.h  hash_map.h  hash_set.h  hashfuncs.h  list.h  local_vector.h  lru.h  oa_hash_map.h  paged_allocator.h  paged_array.h  rb_map.h  rb_set.h  rid_owner.h  ring_buffer.h  safe_list.h  self_list.h  sort_array.h  vector.h
core/variant/: array.h  binder_common.h  callable.h  callable_bind.h  method_ptrcall.h  native_ptr.h  type_info.h  typed_array.h  variant.cpp  variant.h  variant_internal.h  variant_parser.h  variant_setget.cpp
drivers/: CMakeLists.txt
drivers/d3d12/: dxil_hash.cpp  rendering_device_driver_d3d12.cpp
drivers/gles3/: rasterizer_canvas_gles3.cpp
drivers/png/: png_driver_common.cpp
drivers/vulkan/: rendering_device_driver_vulkan.cpp
drivers/windows/: file_access_windows.cpp
editor/: CMakeLists.txt  action_map_editor.cpp  action_map_editor.h  add_metadata_dialog.cpp  add_metadata_dialog.h  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  audio_stream_preview.cpp  audio_stream_preview.h  code_editor.cpp  code_editor.h  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  dependency_editor.cpp  dependency_editor.h  directory_create_dialog.cpp  directory_create_dialog.h  doc_tools.cpp  doc_tools.h  editor_about.cpp  editor_about.h  editor_asset_installer.cpp  editor_asset_installer.h  editor_atlas_packer.cpp  editor_atlas_packer.h  editor_audio_buses.cpp  editor_audio_buses.h  editor_autoload_settings.cpp  editor_autoload_settings.h  editor_build_profile.cpp  editor_build_profile.h  editor_command_palette.cpp  editor_command_palette.h  editor_data.cpp  (+131 more)
editor/debugger/: editor_debugger_inspector.cpp  editor_debugger_inspector.h  editor_debugger_node.h  editor_debugger_server.cpp  script_editor_debugger.h
editor/export/: codesign.cpp  editor_export.h  editor_export_platform.cpp  editor_export_platform.h  editor_export_platform_extension.h  editor_export_platform_pc.cpp  editor_export_platform_pc.h  editor_export_preset.h  export_template_manager.cpp  export_template_manager.h  project_export.h
editor/gui/: editor_file_dialog.h  editor_object_selector.h  editor_quick_open_dialog.h  editor_scene_tabs.h  editor_spin_slider.h  editor_title_bar.cpp  editor_title_bar.h  editor_toaster.h  editor_version_button.h  scene_tree_editor.cpp  scene_tree_editor.h
editor/import/: audio_stream_import_settings.cpp  editor_import_plugin.h  resource_importer_bitmask.h  resource_importer_bmfont.h  resource_importer_csv_translation.h  resource_importer_dynamic_font.h  resource_importer_image.h  resource_importer_imagefont.h  resource_importer_layered_texture.h  resource_importer_shader_file.h  resource_importer_texture.cpp  resource_importer_texture.h  resource_importer_texture_atlas.h  resource_importer_texture_settings.h  resource_importer_wav.cpp  resource_importer_wav.h
editor/plugins/: abstract_polygon_2d_editor.h  (+85 more)
main/: CMakeLists.txt  main.cpp
platform/: CMakeLists.txt
scene/: CMakeLists.txt  property_list_helper.cpp  register_scene_types.cpp  scene_string_names.h
servers/: CMakeLists.txt  audio_server.h  camera_server.h  display_server.h  physics_server_2d.h  physics_server_3d.h  rendering_server.cpp  rendering_server.h  text_server.h  xr_server.h
tests/: CMakeLists.txt  test_tools.h  test_utils.h
(+480 files in other folders)
